--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sanity": "sanity dev"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.0",
     "@sanity/icons": "^3.5.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.67.1",
